--- a/csp-apps/vcbridge/vcb-admin/src/main/resources/templates/email/invitation.html
+++ b/csp-apps/vcbridge/vcb-admin/src/main/resources/templates/email/invitation.html
@@ -5,9 +5,9 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport"
 	content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-<meta name="description" content="Login" />
-<meta name="author" content="Dimis - Sastix" />
-<meta name="keyword" content="SCX videoconference" />
+<meta name="description" content="VCB Invite" />
+<meta name="author" content="CSP VCB" />
+<meta name="keyword" content="jitsi,videoconference" />
 <!-- <link rel="shortcut icon" href="assets/ico/favicon.png"> -->
 <title>Meeting notification</title>
 </head>
