patch (stored) XSS vulnerabilities in central server and client
- upgrade to the maven latest version of bootstrap table to utilize the 'data-escape' feature for dynamic data-field escaping of injected JS
- include a custom escaping function for JS outputs
- add input filters for specific data types e.g. IP, domain, email, etc.

--- a/csp-apps/configuration/conf-server/src/main/resources/templates/pages/csp/list.html
+++ b/csp-apps/configuration/conf-server/src/main/resources/templates/pages/csp/list.html
@@ -43,14 +43,14 @@
                 <thead>
                 <tr>
                     <th data-field="icon" data-align="center"></th>
-                    <th data-field="cspId" data-sortable="true">CSP Id</th>
-                    <th data-field="name" data-sortable="true">CSP Name</th>
-                    <th data-field="domainName" data-sortable="true">Domain</th>
-                    <th data-field="registrationDate" data-sortable="true">Registered</th>
-                    <th data-field="internalIps" data-sortable="false" data-visible="false" class="col-xs-1">Internal IPs</th>
-                    <th data-field="externalIps" data-sortable="false" data-visible="false" class="col-xs-1">External IPs</th>
-                    <th data-field="contacts" data-sortable="true" data-visible="false" class="col-xs-1">Contacts</th>
-                    <th data-field="btn" data-sortable="false" data-align="center">Actions</th>
+                    <th data-field="cspId" data-sortable="true" data-escape="true">CSP Id</th>
+                    <th data-field="name" data-sortable="true" data-escape="true">CSP Name</th>
+                    <th data-field="domainName" data-sortable="true" data-escape="true">Domain</th>
+                    <th data-field="registrationDate" data-sortable="true" data-escape="true">Registered</th>
+                    <th data-field="internalIps" data-sortable="false" data-visible="false" class="col-xs-1" data-escape="true">Internal IPs</th>
+                    <th data-field="externalIps" data-sortable="false" data-visible="false" class="col-xs-1" data-escape="true">External IPs</th>
+                    <th data-field="contacts" data-sortable="true" data-visible="false" class="col-xs-1" data-escape="true">Contacts</th>
+                    <th data-field="btn" data-sortable="false" data-align="center" data-escape="true">Actions</th>
                 </tr>
                 </thead>
             </table>
