--- a/csp-apps/configuration/conf-server/src/main/resources/templates/pages/module/update.html
+++ b/csp-apps/configuration/conf-server/src/main/resources/templates/pages/module/update.html
@@ -101,6 +101,7 @@
 <th:block th:replace="fragments::scripts"></th:block>
 
 <script th:src="@{/webjars/jquery-validation/1.16.0/jquery.validate.min.js}"></script>
+<script th:src="@{/webjars/jquery-validation/1.16.0/additional-methods.min.js}"></script>
 <script th:src="@{/webjars/jquery-mask-plugin/1.14.10/dist/jquery.mask.min.js}"></script>
 <script th:src="@{/webjars/bootstrap-checkbox/1.2.5/dist/js/bootstrap-checkbox.min.js}"></script>
 
