--- a/csp-apps/configuration/conf-server/src/main/resources/templates/fragments.html
+++ b/csp-apps/configuration/conf-server/src/main/resources/templates/fragments.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" th:href="@{/assets/css/custom.css}"/>
 
     <!-- Bootstrap Table -->
-    <link rel="stylesheet" th:href="@{/webjars/bootstrap-table/1.9.1-1/bootstrap-table.min.css}"/>
+    <link rel="stylesheet" th:href="@{/webjars/bootstrap-table/1.16.0/bootstrap-table.min.css}"/>
 
     <!-- Bootstrap Dialog -->
     <link rel="stylesheet" th:href="@{/webjars/bootstrap3-dialog/1.35.3/dist/css/bootstrap-dialog.min.css}"/>
@@ -127,8 +127,8 @@
     <script th:src="@{/webjars/ie10-viewport-bug-workaround/1.0.3/dist/ie10-viewport-bug-workaround.min.js}"></script>
 
     <!-- Bootstrap Table -->
-    <script th:src="@{/webjars/bootstrap-table/1.9.1-1/bootstrap-table.min.js}"></script>
-    <script th:src="@{/webjars/bootstrap-table/1.9.1-1/locale/bootstrap-table-en-US.min.js}" src="../public/bootstrap-table/locale/bootstrap-table-en-US.js"></script>
+    <script th:src="@{/webjars/bootstrap-table/1.16.0/bootstrap-table.min.js}"></script>
+    <script th:src="@{/webjars/bootstrap-table/1.16.0/locale/bootstrap-table-en-US.min.js}" src="../public/bootstrap-table/locale/bootstrap-table-en-US.js"></script>
 
     <script th:src="@{/assets/js/custom.js}"></script>
 </th:block>
