--- a/csp-apps/configuration/conf-server/src/main/resources/templates/pages/dashboard.html
+++ b/csp-apps/configuration/conf-server/src/main/resources/templates/pages/dashboard.html
@@ -39,14 +39,14 @@
                 <thead>
                 <tr>
                     <th data-field="icon" data-align="center"></th>
-                    <th data-field="name" data-sortable="true">CSP Name</th>
-                    <th data-field="domain" data-sortable="true">Domain</th>
-                    <th data-field="registrationDate" data-sortable="true">Registration Date</th>
-                    <th data-field="lastUpdate" data-sortable="true">Last Heartbeat</th>
-                    <th data-field="lastManaged" data-sortable="true" data-visible="false" class="col-xs-1">Last Managed</th>
-                    <th data-field="confUpdates" data-sortable="false" data-visible="false" class="col-xs-1">Configured Updates</th>
-                    <th data-field="reportUpdates" data-sortable="false" data-visible="false" class="col-xs-1">Reported Updates</th>
-                    <th data-field="btn" data-sortable="false" data-align="center">Actions</th>
+                    <th data-field="name" data-sortable="true" data-escape="true">CSP Name</th>
+                    <th data-field="domain" data-sortable="true" data-escape="true">Domain</th>
+                    <th data-field="registrationDate" data-sortable="true" data-escape="true">Registration Date</th>
+                    <th data-field="lastUpdate" data-sortable="true" data-escape="true">Last Heartbeat</th>
+                    <th data-field="lastManaged" data-sortable="true" data-visible="false" class="col-xs-1" data-escape="true">Last Managed</th>
+                    <th data-field="confUpdates" data-sortable="false" data-visible="false" class="col-xs-1" data-escape="true">Configured Updates</th>
+                    <th data-field="reportUpdates" data-sortable="false" data-visible="false" class="col-xs-1" data-escape="true">Reported Updates</th>
+                    <th data-field="btn" data-sortable="false" data-align="center" data-escape="true">Actions</th>
                 </tr>
                 </thead>
 
