--- a/csp-apps/configuration/conf-server/src/main/resources/templates/pages/module/list.html
+++ b/csp-apps/configuration/conf-server/src/main/resources/templates/pages/module/list.html
@@ -43,11 +43,11 @@
                 <thead>
                 <tr>
                     <th data-field="icon" data-align="center"></th>
-                    <th data-field="shortName" data-sortable="true">Short Name</th>
-                    <th data-field="startPriority" data-sortable="true" data-align="center">Start Priority</th>
-                    <th data-field="isDefault" data-sortable="true" data-align="center">Default</th>
-                    <th data-field="versionsCount" data-sortable="true" data-align="center">Versions Count</th>
-                    <th data-field="btn" data-sortable="false" data-align="center">Actions</th>
+                    <th data-field="shortName" data-sortable="true" data-escape="true">Short Name</th>
+                    <th data-field="startPriority" data-sortable="true" data-align="center" data-escape="true">Start Priority</th>
+                    <th data-field="isDefault" data-sortable="true" data-align="center" data-escape="true">Default</th>
+                    <th data-field="versionsCount" data-sortable="true" data-align="center" data-escape="true">Versions Count</th>
+                    <th data-field="btn" data-sortable="false" data-align="center" data-escape="true">Actions</th>
                 </tr>
                 </thead>
             </table>
